@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libvoikko
+Description: Library for spellcheckers and hyphenators
+Version: @VERSION@
+Libs: -L${libdir} -lvoikko
+Libs.private: -lmalaga
+Cflags: -I${includedir}
